update: handle health checks from target group

--- a/httpd.conf
+++ b/httpd.conf
@@ -284,6 +284,12 @@ DocumentRoot "/usr/local/apache2/htdocs"
     Require all granted
 
     RewriteEngine on
+
+    # Special Check for ECS Target Group Health Check
+    RewriteCond %{REQUEST_URI} ^/health-check.html
+    RewriteRule ^ health-check.html [L]
+
+    # Rewrite everything else to https
     RewriteCond %{HTTPS} !=on
     RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
 </Directory>
